src/objects/Controldeestados__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Control de estados en la solicitud de crédito por perfil</description>
    <fields>
        <fullName>Estado_1__c</fullName>
        <label>Estado 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_2__c</fullName>
        <label>Estado 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perfil__c</fullName>
        <label>Perfil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Control de estados en la solicitud</label>
</CustomObject>